#38 more j8 fixes